# OBO_fastapi

./: .dockerignore  .env.docker  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: application.py  db.py
app/alembic/: env.py
app/alembic/versions/: 161ffc2d4bd4_.py
app/cruds/: deal.py  user.py
app/models/: chatroom.py  deal.py  user.py
app/routers/: deal.py  user.py  utils.py
